[gd_scene load_steps=2 format=3 uid="uid://ns2aiuz3oakz3"]

[ext_resource type="Script" uid="uid://k9puvuivuj9q0" path="res://algorithms/lsystems/tree_generation/TreeGeneration.gd" id="1_tree_gen"]

[node name="TreeGeneration" type="Node3D"]
script = ExtResource("1_tree_gen")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.5

[node name="TreeRoot" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
radius = 0.2

[node name="TreeBranches" type="Node3D" parent="."]

[node name="TreeLeaves" type="Node3D" parent="."]

[node name="GenerationIndicator" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, 0)
size = Vector3(0.3, 1, 0.2)

[node name="RuleDisplay" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -2, 0)
size = Vector3(0.5, 0.3, 0.2)
